[project]
name = "controlled-tool-orchestrator"
version = "0.0.0"
description = "Production-style controlled tool execution platform (no LLM, no Docker)."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.135.1",
  "uvicorn==0.41.0",
  "pydantic==2.12.5",
  "sqlalchemy==2.0.48",
  "aiosqlite==0.22.1",
  "sqlalchemy[asyncio]>=2.0",
  "greenlet",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio>=1.3.0",
  "httpx==0.28.1",
  "ruff==0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]